@@ -8300,3 +8300,7 @@ EPRINTS-3.1-beta-2
 2009-06-09 cjg
  * Added experiemental alternate search method. Not yet used by default.
  * Added *temporary* config option "temp_use_v2_search" to use new style search.
+
+2009-06-09 tdb
+ * Fixed schema errors in uketd_dc and METS/MODS export plugins
+
